
cc_library(
	name = "poly_collection",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_type_erasure//:type_erasure",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_assert//:assert"
	],
)
